F&GDEV/src/objects/Enhancement_Ideas__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>What category best aligns with your request? If &quot;Other&quot; is chosen, please enter a word that describes the area/object/feature within Salesforce that relates to your request.</inlineHelpText>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Activities</fullName>
                </value>
                <value>
                    <fullName>Ad Review</fullName>
                </value>
                <value>
                    <fullName>AgentIDs</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Dashboards</fullName>
                </value>
                <value>
                    <fullName>Emails</fullName>
                </value>
                <value>
                    <fullName>Estimates</fullName>
                </value>
                <value>
                    <fullName>Expenses</fullName>
                </value>
                <value>
                    <fullName>Filings/Forms</fullName>
                </value>
                <value>
                    <fullName>Integrations</fullName>
                </value>
                <value>
                    <fullName>Notifications</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Projects</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Subprojects</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>When the enhancement request was closed.</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enhancement_Idea_Detail__c</fullName>
        <inlineHelpText>Explain your request in as much detail as possible. If related to a current issue, please provide steps to replicate the issue in order for us to address your request.</inlineHelpText>
        <label>Enhancement Idea Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enhancement_Idea__c</fullName>
        <inlineHelpText>Briefly define your request in a few words.</inlineHelpText>
        <label>Enhancement Idea</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Category__c</fullName>
        <inlineHelpText>If the category &quot;Other&quot; was selected above, then this field is required to be filled. This helps us to understand other or new category values should be included in the main Category dropdown field.</inlineHelpText>
        <label>Other Category</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Enhancement Ideas</relationshipLabel>
        <relationshipName>Enhancement_Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The current status of the request.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who submitted this enhancement request. At times this may be the same user as the &quot;Creator&quot; of the request.</description>
        <inlineHelpText>Who submitted this enhancement request? At times this may be the same user as the &quot;Creator&quot; of the request.</inlineHelpText>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Enhancement_Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subproject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subproject</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipLabel>Enhancement Ideas</relationshipLabel>
        <relationshipName>Enhancement_Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Enhancement Idea</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Enhancement_Idea__c</columns>
        <columns>Enhancement_Idea_Detail__c</columns>
        <columns>Project__c</columns>
        <columns>Category__c</columns>
        <columns>Other_Category__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Submitter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Enhancement_Requests</fullName>
        <columns>NAME</columns>
        <columns>Enhancement_Idea__c</columns>
        <columns>Enhancement_Idea_Detail__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,On Hold,Escalated</value>
        </filters>
        <label>My Open Enhancement Requests</label>
    </listViews>
    <nameField>
        <displayFormat>EI-{00000}</displayFormat>
        <label>Enhancement Idea</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enhancement Ideas</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Other_Requires_Other_Category</fullName>
        <active>true</active>
        <description>If &quot;Other&quot; is selected as a category, then &quot;Other Category&quot; must be filled out.</description>
        <errorConditionFormula>ISPICKVAL( Category__c , &quot;Other&quot;) &amp;&amp;  ISBLANK( Other_Category__c )</errorConditionFormula>
        <errorDisplayField>Other_Category__c</errorDisplayField>
        <errorMessage>Please enter a category in the &quot;Other Category&quot; field that describes the category relating to your request. This helps us add new values to &quot;Category&quot; from which you can select in the future.</errorMessage>
    </validationRules>
</CustomObject>